fixing input fields font problems (size, color, readability)

--- a/kapcsolat.css
+++ b/kapcsolat.css
@@ -484,6 +484,9 @@ form {
 }
 
 input {
+    font-size: 18px;
+    color: var(--contact-text-color);
+    font-weight: bold;
     width: var(--form-input-width);
     height: 50px;
     background-color: var(--input-color);
@@ -495,6 +498,9 @@ input {
 }
 
 textarea {
+    font-size: 18px;
+    color: var(--contact-text-color);
+    font-weight: bold;
     width: 100%;
     height: 120px;
     background-color: var(--input-color);
